Modified the output-text placeholder value

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1> URL Encode Decode</h1>
            <div class="input-section">
                 <input type ="text" id ="input-text" placeholder="Enter the text you wish to encode or decode">
-                <input type ="text" id ="output-text" placeholder="Your result will be will appear here">
+                <input type ="text" id ="output-text" placeholder="Your result will appear here">
            </div>
            <div>
                 <input type="button" id ="encode" value="Encode">
