--- a/base64decode.html
+++ b/base64decode.html
@@ -5,60 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base64 Decode</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
-        <div>
+        <div class="hd-text">
+            <a style = "text-decoration: none;" href= "index.html" class = "title" > <h2>Encoder Decoder</h2></a>
         </div>
-        <div>
-             <ul>
-                 <li>
-                     <a href="./index.html">URL Encode Decode</a>
-                     <a href="./base64encode.html">Base64 Encode</a>
-                     <a href="./base64decode.html">Base64 Decode</a>
-                     <a href="./md5hash.html">MD5 Hash Generator</a>
-                     <a href="./sha-1.html">SHA-1 Hash Generator</a>
-                     <a href="./sha-256.html">SHA-256 Generator</a>
-                     <a href="./sha-512.html">SHA-512 Generator</a>
-                 </li>
-             </ul>
-        </div>
-                    
+
+        <div class="topnav" id="myTopnav">
+            <a href="base64decode.html" class='active'>Base64 Decode</a>
+            <a href="index.html">URL Encode Decode</a>
+            <a href="base64encode.html">Base64 Encode</a>
+            <a href="md5hash.html">MD5 Hash</a>
+            <a href="sha-1.html">SHA-1 Hash</a>
+            <a href="sha-256.html">SHA-256</a>
+            <a href="sha-512.html">SHA-512</a>
+            <a href= "https://utilityappmain.netlify.app/index.html" target="_blank" > Home</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+        </div>         
     </header>
-    <section class="tools-container">
-        <div class ="showcase">
-            <h1> Base64 Decoder</h1>
-           <div class="input-section">
+
+    <div class="wrapper">
+        <div class="wrapper-left">
+            <h3>Base64 Decoder</h3>
+            <div class="input">
                 <input type ="text" id ="input-text" placeholder="Enter the text you wish to encode or decode">
                 <input type ="text" id ="output-text" placeholder="Your result will be will appear here">
-           </div>
-           <div>
-                <input type="button" id ="decode" value="Decode">
-                <input type="button" id ="clear" value="Clear">
-           </div>
-        </div>
-        <div class ="top-box-a">
-            <h2>Related Tools</h2>
+            </div>
 
+            <div class="btn-group">
+                <input type="button" id ="decode" value="Decode" class ='btn'>
+                <input type="button" id ="clear" value="Clear" class ='btn'>
+            </div>
         </div>
-    </section>
-    <section class="boxes">
-        <div class ="box">
-            <h3>What is Base64 decoding?</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fugit, cupiditate at non sint obcaecati molestiae placeat fuga, tempore, dolorem temporibus sunt quibusdam vero ratione alias amet eaque ea atque!</p>
+        <div class="wrapper-left">
+            <div class="box">
+                <h3>What is Base64 encoding?</h3>
+                <p>The term Base 64 is generic, and there are many implementations. MIME, which stands for Multi-Purpose Internet Mail Extensions, is the most common that is seen today. It is used to transmit attachments via email over the Simple Mail Transfer Protocol (SMTP). Other examples of Base64 encoding are Radix-64 and YUI's Y64. Encoding data in Base64 results in it taking up roughly 33% more space than the original data.
+                 <br>
+                 <br>
+                 MIME Base64 encoding is the most common, and is based on the RFC 1420 specification. It also uses a = character at the end of a string to signify whether the last character is a single or double byte.</p>
+            </div>
+            <div class="box">
+                 <h3>When and why would you use Base64 encoding?</h3>
+                 <p>You should use Base64 whenever you intend to transmit binary data in a textual format.</p>
+            </div>
         </div>
-        <div class ="box">
-            <h3>Encoding/Decoding a Piece of Text?</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea veritatis aperiam nulla quo temporibus similique. Quidem, eveniet labore. At illum recusandae, voluptatibus porro aliquid expedita. Dolore, a. Beatae, voluptatum nemo!</p>
-        </div>
-        <div class ="box">
-            <h3>When and why would you use Base64 decoding?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae dolor inventore, ducimus sequi eos dolorum veniam atque similique autem laboriosam quam! Quo ex ad pariatur itaque fuga doloremque autem voluptatum.</p>
-        </div>
-    </section>
+
+    </div>
+
 
     <footer>
-        <p>Created by &copy; Aanchal Gupta</p>
+        <div class="footer-text">
+            <h4>Made with <span class="fa fa-heart"></span> by Aanchal</h4>
+        </div>
+        <div class="footer-icons">
+            <ul>
+                <li> <a href="https://github.com/aangupta"class="fa fa-github"target="_blank" ></a></li>
+                <li> <a href="https://www.linkedin.com/in/aanchal-gupta-3ab35bb1/" class="fa fa-linkedin" target="_blank"></a></li>
+                <li><a href="https://twitter.com/aangupta5"class="fa fa-twitter"target="_blank"></a> </li>
+                <li> <a href="mailto: aanchalgupta457@gmail.com" class="fa fa-envelope" target="_blank"></a> </li>
+            </ul>
+            
+        </div>
     </footer>
     <script src="script2.js"></script>
 </body>
