added toggle function

--- a/md5hash.html
+++ b/md5hash.html
@@ -89,6 +89,15 @@
                 const hash = CryptoJS.MD5(input.value);
                 document.querySelector('#output-text').value = hash.toString(CryptoJS.enc.Hex);
             });
+
+            function myFunction() {
+                var x = document.getElementById("myTopnav");
+                if (x.className === "topnav") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "topnav";
+                }
+            }
     
     </script>
 </body>
